--- a/app.json
+++ b/app.json
@@ -1,30 +1,60 @@
 {
   "expo": {
-    "name": "zeni",
+    "name": "Zeni",
     "slug": "zeni",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#F5F5F5"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.zeni.app",
+      "infoPlist": {
+        "NSCameraUsageDescription": "Zeni needs camera access to scan documents",
+        "NSPhotoLibraryUsageDescription": "Zeni needs photo library access to import and save documents"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#F5F5F5"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "package": "com.zeni.app",
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow Zeni to access your camera to scan documents"
+        }
+      ],
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "Allow Zeni to access your photos",
+          "savePhotosPermission": "Allow Zeni to save documents"
+        }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Allow Zeni to access your photos"
+        }
+      ]
+    ]
   }
 }
