feat: Major app update - Zai AI assistant, folder sharing, and website enhancements
## App Features
- Added Zai AI assistant with 20+ action types (document management, settings, navigation)
- Implemented folder sharing with password protection, expiry, and view limits
- Added SharedFolderViewScreen for viewing shared folders in-app
- Deep linking support for share URLs (https://zeni.app/share?token=xxx)
- Added ForgotPasswordScreen for password recovery
- Added StudentVerificationScreen for student account verification
- Premium access utilities and fax service integration

## UI/UX Improvements
- Updated app icons and splash screen
- Enhanced theme with Zeni Blue primary color (#017DE9)
- Improved navigation with proper back button handling
- Added SignatureCanvas component for document signing

## Website Updates
- New share.html page for web-based folder sharing preview
- Added careers.html and contact.html pages
- Updated branding assets (logos, icons, SVGs)
- Enhanced privacy.html and terms.html

## Technical
- Extended Zustand stores with folder share management
- Updated TypeScript types for new features
- Improved AI service with comprehensive action execution

--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#F5F5F5"
+      "backgroundColor": "#f8fafc"
     },
     "ios": {
       "supportsTablet": true,
