--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~54.0.0",
     "expo-auth-session": "^7.0.10",
     "expo-camera": "~17.0.9",
+    "expo-constants": "~18.0.12",
     "expo-crypto": "^15.0.8",
     "expo-document-picker": "~14.0.7",
     "expo-file-system": "~19.0.19",
